// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout Block should render correctly 1`] = `
<div
  className="css-lvg2xm "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout Box should allow overriding of default styles 1`] = `
<div
  className="css-rwbbym "
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`components/layout Box should allow passing vector style values 1`] = `
<div
  className="css-s6kp88 "
  style={Object {}}
/>
`;

exports[`components/layout Box should render correctly 1`] = `
<div
  className="css-soj31u "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout Flex should render correctly 1`] = `
<div
  className="css-fmu9xg "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout Inline should render correctly 1`] = `
<span
  className="css-s51yq6 "
  onClick={null}
  style={Object {}}
/>
`;

exports[`components/layout InlineFlex should render correctly 1`] = `
<span
  className="css-1rab86q "
  onClick={null}
  style={Object {}}
/>
`;
